Use fromLocal8Bit to convert gphoto2's strings to QString

BUG: 272180